+ Replaced deprecated API Usage with modern Paper / Adventure API